RESOLVED FIXED 164406
IndexedDB 2.0: Use IDB-specific Exceptions in places where the generic exceptions are currently used
https://bugs.webkit.org/show_bug.cgi?id=164406
Summary IndexedDB 2.0: Use IDB-specific Exceptions in places where the generic except...
Brady Eidson
Reported 2016-11-03 22:43:51 PDT
IndexedDB 2.0: IDB-specific Exceptions should have a code 0 (instead of exposing the internal enum code) This is mentioned in section 2.5.1 of WebIDL https://heycam.github.io/webidl/
Attachments
Patch (14.00 KB, patch)
2016-11-04 10:11 PDT, Brady Eidson
no flags
Brady Eidson
Comment 1 2016-11-03 22:46:57 PDT
This will be an easy fix in createDOMException (JSDOMBinding.cpp) or closely related code.
Brady Eidson
Comment 2 2016-11-04 10:04:49 PDT
Updating title: IndexedDB 2.0: Use IDB-specific Exceptions in places where the generic exceptions are currently used
Brady Eidson
Comment 3 2016-11-04 10:11:05 PDT
WebKit Commit Bot
Comment 4 2016-11-04 11:05:02 PDT
Comment on attachment 293894 [details] Patch Clearing flags on attachment: 293894 Committed r208386: <http://trac.webkit.org/changeset/208386>
WebKit Commit Bot
Comment 5 2016-11-04 11:05:06 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.